# R-Type

./: .clang-format  .gitignore  CMakeCache.txt  CMakeLists.txt  CMakePresets.json  Example.hpp  Info.plist  LICENSE  Makefile  README.md  beautify.sh  clean.sh  cmake_install.cmake  libGEngine.so.0.0.1  r-type.json  r-type_client  r-type_server  resintall_genegine.sh  run.sh
.github/workflows/: cmake-multiplatform.yml  compilation-gengine.yml  compilation-rtype.yml
assets/: icon.icns
assets/animations/: boss-ball.json  boss.json  bullets.json  effects.json  explosions.json  plane.json  r-typesheet1.json  r-typesheet3.json  r-typesheet42.json  r-typesheet43.json  r-typesheet5.json  robot.json  spaceships.json
assets/bosses/: orange.json  red.json  yellow.json
assets/bullets/: boss-ball.json  small.json
assets/mobs/: barrierBStatic.json  barrierLStatic.json  caterpillarD.json  caterpillarDHorde.json  caterpillarU.json  caterpillarUHorde.json  plane.json  planeHorde.json  robot.json  robotHorde.json
assets/stages/: 1.json  2.json  3.json  lobby.json
cmake/: armv8-toolchain.cmake  automate-vcpkg-gengine.cmake  automate-vcpkg.cmake  custom-gengine.cmake  define-compilers.cmake  pack.cmake
cmake/compilers/Apple/: armv8.cmake  x64.cmake
cmake/compilers/GNU/: armv7.cmake  armv8.cmake  x86.cmake
cmake/compilers/Windows/: armv7.cmake  armv8.cmake  x86.cmake
config/: net.json
include/: Constants.hpp  RTypeManager.hpp  Types.hpp
include/GEngine/: BaseEngine.hpp  BaseEngine.inl  StartSystem.hpp
include/GEngine/Interface/: Base.hpp  Interface.hpp  Internal.hpp
include/GEngine/cvar/: cvar.hpp  net.hpp
include/GEngine/driver/: Engine.hpp
include/GEngine/driver/systems/: DriverSystem.hpp  Event.hpp
include/GEngine/game/: Engine.hpp
include/GEngine/game/components/: Hitbox.hpp  Sprite.hpp
include/GEngine/interface/: Base.hpp  Internal.hpp
include/GEngine/interface/network/: Networked.hpp
include/GEngine/libdev/: Component.hpp  Entity.hpp  System.hpp
include/GEngine/libdev/components/: HitBoxs.hpp  Motions.hpp  Transforms.hpp  Velocities.hpp
include/GEngine/libdev/deprecated/: Collisions.hpp  Color.hpp  Motions.hpp  Positions.hpp
include/GEngine/net/: cl_net_client.hpp  msg.hpp  net.hpp  net_address.hpp  net_channel.hpp  net_client.hpp  net_client_voip.hpp  net_common.hpp  net_ftp.hpp  net_msg.hpp  net_server.hpp  net_utils.hpp  socket.hpp  socketError.hpp
include/GEngine/time/: time.hpp
include/components/: Background.hpp  Barriers.hpp  Boss.hpp  Bounding.hpp  Bullet.hpp  BulletEnemy.hpp  Caterpillar.hpp  Flapping.hpp  GameState.hpp  InputBoxMapper.hpp  Invincible.hpp  Life.hpp  Monster.hpp  Plane.hpp  Player.hpp  PlayerControl.hpp  Score.hpp  ScoreText.hpp  Shooter.hpp
include/ecs/: ECS.hpp  ECS.inl  SystemTest.hpp
include/ecs/component/: IsComponent.hpp  Iterator.hpp  Iterator.inl  Manager.hpp  Manager.inl  SparseArray.hpp  SparseArray.inl
include/ecs/entity/: Entity.hpp  Manager.hpp
include/ecs/system/: Base.hpp  Base.inl  IsSystem.hpp  Manager.hpp  Manager.inl
include/events/: BecomeInvincible.hpp  BossSpawnWave.hpp  BossSpawnWaveEvent.hpp  EnemyShootEvent.hpp  GameInputs.hpp  GameOver.hpp  Movement.hpp  NextStage.hpp  Shoot.hpp  StartGame.hpp  TextSize.hpp
include/example/: ExComponent.hpp  ExEvent.hpp  ExSystem.hpp
include/exceptions/: Base.hpp
include/shared/: cvar.hpp  net.hpp  net_common.hpp  shared.hpp  socket.hpp
include/shared/cvar/: net.hpp
include/systems/: AutoMotion.hpp  BackgroundMotion.hpp  Boss.hpp  BossManager.hpp  BoundingMotion.hpp  BulletManager.hpp  CaterpillarsBound.hpp  CaterpillarsWave.hpp  ClearBullets.hpp  ClearEntities.hpp  DestroyOnCollision.hpp  EnemyShoot.hpp  FlappingMotion.hpp  GameOverScenes.hpp  InputsMapper.hpp  InputsToGameEvents.hpp  Invincibility.hpp  Lobby.hpp  MobManager.hpp  MonstersAutoMotion.hpp  PlanesAutoMotion.hpp  PlanesWave.hpp  PlayerAnimation.hpp  PlayerGui.hpp  PlayerMotion.hpp  PlayerShoot.hpp  Scenes.hpp  Scoreboard.hpp  StageManager.hpp  Start.hpp  TextSizeModifier.hpp  UpdateScoreText.hpp
overlay-ports/gengine/: portfile.cmake  usage  vcpkg.json
poc/: CMakeLists.txt
poc/cmake/: automate-vcpkg-gengine.cmake
poc/include/systems/: AutoMotion.hpp  Start.hpp
poc/overlay-ports/GEngine/: vcpkg.json
poc/overlay-ports/gengine/: portfile.cmake  vcpkg.json
poc/source/: main.cpp
poc/source/systems/: AutoMotion.cpp  Start.cpp
r-type/: CMakeLists.txt  CMakePresets.json
r-type/client/: main.cpp
r-type/server/: main.cpp
r-type/shared/: cvar.cpp  net.cpp  socket.cpp
r-type/shared/cvar/: net.cpp
source/: RTypeManager.cpp  Types.cpp  components.cpp  events.cpp  main.cpp  systems.cpp
source/GEngine/: BaseEngine.cpp
source/GEngine/cvar/: cvar.cpp  net.cpp
source/GEngine/driver/: Engine.cpp
source/GEngine/game/: Engine.cpp
source/GEngine/interface/: Internal.cpp
source/GEngine/net/: cl_net_client.cpp  net.cpp  net_address.cpp  net_channel.cpp  net_channel_pool.cpp  net_client.cpp  net_server.cpp  net_utils.cpp  socket.cpp
source/GEngine/time/: time.cpp
source/cvar/: cvar.cpp
source/ecs/: ECS.cpp
source/ecs/component/: Manager.cpp
source/ecs/entity/: Entity.cpp  Manager.cpp
source/ecs/system/: Manager.cpp
source/example/: ExSystem.cpp
source/exceptions/: Base.cpp
source/systems/: AutoMotion.cpp  BackgroundMotion.cpp  Boss.cpp  BossManager.cpp  BoundMotion.cpp  BulletManager.cpp  CaterpillarsBound.cpp  CatterpillarsWave.cpp  ClearBullets.cpp  ClearEntities.cpp  DestroyOnCollision.cpp  EnemyShoot.cpp  FlappingMotion.cpp  GameOverScenes.cpp  InputsMapper.cpp  InputsToGameEvents.cpp  Invincibility.cpp  Lobby.cpp  MobManager.cpp  MonstersAutoMotion.cpp  PlanesAutoMotion.cpp  PlanesWave.cpp  PlayerAnimation.cpp  PlayerGui.cpp  PlayerMotion.cpp  PlayerShoot.cpp  Scenes.cpp  Scoreboard.cpp  StageManager.cpp  Start.cpp  TextSizeModifier.cpp  Types.cpp  UpdateScoreText.cpp
sourceOld/: main.cpp
sourceOld/systems/: AutoMotion.cpp  Start.cpp
src/client/: client.cpp
src/server/: server.cpp
src/shared/: shared.cpp  socket.cpp
(+75 files in other folders)
